--- a/ECommerce/Views/Produit/List.cshtml
+++ b/ECommerce/Views/Produit/List.cshtml
@@ -1,9 +1,12 @@
-﻿@model IQueryable<ECommerce.Models.Produit>
+﻿@model ECommerce.Models.ViewModels.ListeProduitsViewModels
 @{
 }
 
 <!DOCTYPE Html>
 <html>
+    <head>
+        <link href="~/css/StyleSheet.css" rel="stylesheet" />
+    </head>
     <body>
         <p>
             <h2>Liste des produits</h2>
@@ -18,7 +21,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (ECommerce.Models.Produit r in Model)
+                    @foreach (ECommerce.Models.Produit r in Model.ListeProduits)
                     {
                         <tr>
                             <td>@r.IDProduit</td>
@@ -28,7 +31,14 @@
                             <td>@r.Categorie</td>
                         </tr>
                     }
+                    
                 </tbody>
             </table>
+            <ul id="menu_horizontal">
+                @for (int i = 0; i < Model.PaginationInfos.GetNombrePage(); i++)
+                {
+                    <li><a href="/Produit/List/@(i+1)/">Page @(i + 1)</a></li>
+                }
+            </ul>
     </body>
 </html>
